--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,10 @@ dependencies {
     testCompile 'junit:junit:4.11',
             'com.googlecode.zohhak:zohhak:1.1.1'
 
+    //Matcher libs
+    // https://mvnrepository.com/artifact/org.assertj/assertj-core
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
+
+    // https://mvnrepository.com/artifact/com.google.truth/truth
+    testImplementation group: 'com.google.truth', name: 'truth', version: '1.0.1'
 }
